# NeuralNet

./: .gitignore  CMakeLists.txt  DbOperations.cpp  DbOperations.h  GlobalVariables.cpp  GlobalVariables.h  ImportData.cpp  ImportData.h  Neuron.cpp  Neuron.h  Private.h  Sigmoid.cpp  improvements to be made.txt  main.cpp
Training/: BackPropagation.cpp  BackPropagation.h  ForwardPropagation.cpp  ForwardPropagation.h  MakeTrainingSample.cpp  MakeTrainingSample.h  Normalization.cpp  Normalization.h
